fix spacing

--- a/src/stylesheets/components/_content-heading.scss
+++ b/src/stylesheets/components/_content-heading.scss
@@ -1,5 +1,5 @@
 $app-content-heading-icon-size: .6em;
-$app-content-heading-icon-gutter: .1.5em;
+$app-content-heading-icon-gutter: .15em;
 
 @include govuk-exports("app-content-heading") {
   // Anchored headings
